--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
+    "bulma": "^0.9.3",
+    "cors": "^2.8.5",
+    "moment": "^2.29.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
